# spreadsheet-to-invoiceshelf

./: .gitignore  Cargo.toml  ExampleConfig.toml  ExampleTemplate.toml  README.md  flake.nix  test.ods
src/: app_config.rs  cli.rs  invoice_shelf.rs  main.rs  navigation.rs  session.rs  spreadsheet_parsing.rs  template_mapping.rs
src/navigation/: config_file_creation.rs  import.rs  login.rs
