[package]
name = "spreadsheet-to-invoiceshelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.26.1"
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
regex = "1.11.1"
serde ={ version = "1.0.213", features = ["derive"] } 
toml = "0.8.19"
inquire = { version = "0.7.5", features = ["date", "editor"] }
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
